--- a/fsharp/Solver/Solver.fsproj
+++ b/fsharp/Solver/Solver.fsproj
@@ -9,4 +9,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
+  </ItemGroup>
+
 </Project>
